[project]
name = "vancouver-real-estate-scraper"
version = "0.1.0"
description = "A headless scraper for collecting real estate listings data from Zealty.ca"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
scrape = "zealty_scraper_multi:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["zealty_scraper_multi.py"]
